--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,21 @@ ul,ol,li,p,h1,h2,h3,h4,h5,h6{
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  animation: text-shadow-drop-center 0.4s both;
 }
+
+
+
+/* 
+ @keyframes text-shadow-drop-center {
+  0% {
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    text-shadow: 0 0 18px rgba(0, 0, 0, 0.35);
+  }
+}  */
 
 /* Button */
 .button {
@@ -225,6 +239,7 @@ ul,ol,li,p,h1,h2,h3,h4,h5,h6{
   width: 200px;
   height: 50px;
 }
+
 .button:hover,
 .button:focus{
   color: var(--primary-background-color);
@@ -537,6 +552,7 @@ border: 1px solid var(--accent-color);
   width: 100%;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  perspective: 1400px;
 }
 
 .back-drop.is-hidden {
@@ -551,11 +567,18 @@ border: 1px solid var(--accent-color);
   top: 50%;
   left: 50%;
   background-color:var(--primary-background-color);
-  transform: translate(-50%,-50%);
+  transform: translateX(-50%) translateY(-50%) translateZ(0) ;
+  opacity: 1;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
   0px 1px 1px rgba(0, 0, 0, 0.14),
   0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: opacity 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940), transform 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+}
+
+.back-drop.is-hidden .modal {
+  transform: translateX(-50%) translateY(-50%) translateZ(-1400px);
+  opacity: 0;
 }
 
 .close-btn{
